# humidity-tracker

./: .gitignore  CMakeLists.txt  README.md  X509-cert-8364012633468621542.pem  core  index.js  index.js.map  native.js  package-lock.json  package.json  pnpm-lock.yaml  sensor.cpp  test.py  tsconfig.json
config/: default.json5
src/: sensor.cpp
src/ts/: index.js  index.ts  instance.ts  logger.ts  native-dht.ts  native.ts
